--- a/package.json
+++ b/package.json
@@ -17,24 +17,25 @@
     "url": "https://github.com/pranaydutta89/covid19India/issues"
   },
   "dependencies": {
-    "@babel/preset-react": "~7.8.3",
-    "webpack-dev-server": "~3.10.1",
-    "html-webpack-plugin": "~3.2.0",
-    "clean-webpack-plugin": "~3.0.0",
-    "@babel/plugin-transform-runtime": "~7.8.0",
-    "@babel/plugin-proposal-class-properties": "~7.8.3",
-    "@babel/runtime": "~7.8.0",
     "@babel/core": "~7.8.0",
+    "@babel/plugin-proposal-class-properties": "~7.8.3",
+    "@babel/plugin-transform-runtime": "~7.8.0",
     "@babel/preset-env": "~7.8.2",
+    "@babel/preset-react": "~7.8.3",
+    "@babel/runtime": "~7.8.0",
+    "@material-ui/core": "~4.9.11",
+    "@material-ui/icons": "~4.9.1",
     "babel-loader": "~8.0.6",
-    "webpack-cli": "~3.3.10",
-    "webpack": "~4.41.5",
-    "webpack-bundle-analyzer": "~3.6.0",
-    "webpack-merge": "~4.2.2",
+    "clean-webpack-plugin": "~3.0.0",
+    "html-webpack-plugin": "~3.2.0",
+    "memoize-one": "^5.1.1",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
-    "@material-ui/core": "~4.9.11",
-    "@material-ui/icons": "~4.9.1"
+    "webpack": "~4.41.5",
+    "webpack-bundle-analyzer": "~3.6.0",
+    "webpack-cli": "~3.3.10",
+    "webpack-dev-server": "~3.10.1",
+    "webpack-merge": "~4.2.2"
   },
   "homepage": "https://github.com/pranaydutta89/covid19India#readme"
 }
