--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "babel-loader": "~8.0.6",
     "clean-webpack-plugin": "~3.0.0",
     "html-webpack-plugin": "~3.2.0",
-    "memoize-one": "^5.1.1",
+    "lodash": "~4.17.15",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "webpack": "~4.41.5",
