--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "webpack-bundle-analyzer": "~3.6.0",
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "~3.10.1",
-    "webpack-merge": "~4.2.2"
+    "webpack-merge": "~4.2.2",
+    "uuid": "~7.0.3"
   },
   "homepage": "https://github.com/pranaydutta89/covid19India#readme"
 }
