--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "~3.10.1",
     "webpack-merge": "~4.2.2",
-    "uuid": "~7.0.3"
+    "uuid": "~7.0.3",
+    "moment": "~2.24.0"
   },
   "homepage": "https://github.com/pranaydutta89/covid19India#readme"
 }
