--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "~3.10.1",
     "webpack-merge": "~4.2.2",
+    "workbox-webpack-plugin": "~5.1.2",
     "uuid": "~7.0.3",
     "moment": "~2.24.0"
   },
