--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
     "clean-webpack-plugin": "~3.0.0",
     "html-webpack-plugin": "~3.2.0",
     "lodash": "~4.17.15",
+    "moment": "~2.24.0",
+    "prettier-webpack-plugin": "^1.2.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "uuid": "~7.0.3",
     "webpack": "~4.41.5",
     "webpack-bundle-analyzer": "~3.6.0",
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "~3.10.1",
     "webpack-merge": "~4.2.2",
-    "workbox-webpack-plugin": "~5.1.2",
-    "uuid": "~7.0.3",
-    "moment": "~2.24.0"
+    "workbox-webpack-plugin": "~5.1.2"
+  },
+  "devDependencies": {
+    "prettier": "~2.0.5"
   },
   "homepage": "https://github.com/pranaydutta89/covid19India#readme"
 }
