--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
     "clean-webpack-plugin": "~3.0.0",
     "html-webpack-plugin": "~3.2.0",
     "moment": "~2.24.0",
+    "moment-locales-webpack-plugin": "~1.2.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "webpack": "~4.41.5",
     "webpack-bundle-analyzer": "~3.6.0",
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "~3.10.1",
     "webpack-merge": "~4.2.2",
-    "moment-locales-webpack-plugin": "~1.2.0"
+    "localforage": "~1.7.3"
   },
   "devDependencies": {
     "prettier": "~2.0.5"
