--- a/package.json
+++ b/package.json
@@ -18,30 +18,31 @@
     "url": "https://github.com/pranaydutta89/covid19India/issues"
   },
   "dependencies": {
-    "@babel/core": "~7.8.0",
+    "@babel/core": "~7.9.0",
     "@babel/plugin-proposal-class-properties": "~7.8.3",
-    "@babel/plugin-transform-runtime": "~7.8.0",
-    "@babel/preset-env": "~7.8.2",
-    "@babel/preset-react": "~7.8.3",
-    "@babel/runtime": "~7.8.0",
-    "@material-ui/core": "~4.9.11",
+    "@babel/plugin-transform-runtime": "~7.9.0",
+    "@babel/preset-env": "~7.9.5",
+    "@babel/preset-react": "~7.9.4",
+    "@babel/runtime": "~7.9.2",
+    "@material-ui/core": "~4.9.12",
     "@material-ui/icons": "~4.9.1",
-    "babel-loader": "~8.0.6",
+    "babel-loader": "~8.1.0",
     "clean-webpack-plugin": "~3.0.0",
-    "html-webpack-plugin": "~3.2.0",
+    "html-webpack-plugin": "~4.2.0",
     "moment": "~2.24.0",
     "moment-locales-webpack-plugin": "~1.2.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
-    "serviceworker-webpack-plugin": "^1.0.1",
-    "webpack": "~4.41.5",
-    "webpack-bundle-analyzer": "~3.6.0",
-    "webpack-cli": "~3.3.10",
-    "webpack-dev-server": "~3.10.1",
+    "serviceworker-webpack-plugin": "~1.0.1",
+    "webpack": "~4.43.0",
+    "webpack-bundle-analyzer": "~3.7.0",
+    "webpack-cli": "~3.3.11",
+    "webpack-dev-server": "~3.10.3",
     "webpack-merge": "~4.2.2",
     "localforage": "~1.7.3",
     "sitemap-webpack-plugin": "~0.7.1",
-    "robotstxt-webpack-plugin": "~7.0.0"
+    "robotstxt-webpack-plugin": "~7.0.0",
+    "favicons-webpack-plugin": "~3.0.1"
   },
   "devDependencies": {
     "prettier": "~2.0.5"
