--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
-    "lint:fix": "prettier --write ./src"
+    "lint:fix": "prettier --write ./src",
+    "server": "cd server && node app.js"
   },
   "repository": {
     "type": "git",
@@ -45,7 +46,9 @@
     "favicons-webpack-plugin": "~3.0.1"
   },
   "devDependencies": {
-    "prettier": "~2.0.5"
+    "prettier": "~2.0.5",
+    "express": "~4.17.1",
+    "cors": "~2.8.5"
   },
   "homepage": "https://github.com/pranaydutta89/covid19India#readme"
 }
