--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
-    "lint:fix": "prettier --write ./src",
+    "lint:fix": "prettier --write ./src && eslint ./src/",
     "server": "cd server && node app.js"
   },
   "repository": {
@@ -46,6 +46,8 @@
     "favicons-webpack-plugin": "~3.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "~10.1.0",
+    "eslint": "~6.8.0",
     "prettier": "~2.0.5",
     "express": "~4.17.1",
     "cors": "~2.8.5"
