--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "lint:fix": "prettier --write ./src && eslint ./src/",
-    "server": "cd server && node app.js"
+    "mock:server": "cd server && node app.js"
   },
   "repository": {
     "type": "git",
