--- a/pushServer/package.json
+++ b/pushServer/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "start": "node app.js",
-        "prod": "NODE_ENV=production node app.js"
+        "stop:prod": "npm run forever stop app.js",
+        "prod": "npm run stop:prod || npm run start:prod",
+        "start:prod": "NODE_ENV=production npm run forever start app.js",
+        "forever": "forever"
     },
     "keywords": [],
     "author": "",
@@ -15,6 +18,7 @@
         "express": "~4.17.1",
         "web-push": "~3.4.3",
         "cors": "~2.8.5",
-        "node-fetch": "~2.6.0"
+        "node-fetch": "~2.6.0",
+        "forever": "~2.0.0"
     }
 }
