--- a/package.json
+++ b/package.json
@@ -29,21 +29,23 @@
     "@material-ui/icons": "~4.9.1",
     "babel-loader": "~8.1.0",
     "clean-webpack-plugin": "~3.0.0",
+    "favicons-webpack-plugin": "~3.0.1",
     "html-webpack-plugin": "~4.2.0",
+    "localforage": "~1.7.3",
     "moment": "~2.24.0",
     "moment-locales-webpack-plugin": "~1.2.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-router-dom": "~5.1.2",
+    "robotstxt-webpack-plugin": "~7.0.0",
     "serviceworker-webpack-plugin": "~1.0.1",
+    "sitemap-webpack-plugin": "~0.7.1",
     "webpack": "~4.43.0",
     "webpack-bundle-analyzer": "~3.7.0",
     "webpack-cli": "~3.3.11",
     "webpack-dev-server": "~3.10.3",
-    "webpack-merge": "~4.2.2",
-    "localforage": "~1.7.3",
-    "sitemap-webpack-plugin": "~0.7.1",
-    "robotstxt-webpack-plugin": "~7.0.0",
-    "favicons-webpack-plugin": "~3.0.1"
+    "webpack-merge": "~4.2.2"
   },
   "devDependencies": {
     "babel-eslint": "~10.1.0",
