--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "babel-eslint": "~10.1.0",
     "eslint": "~6.8.0",
+    "eslint-plugin-react": "~7.19.0",
     "prettier": "~2.0.5",
     "express": "~4.17.1",
     "cors": "~2.8.5"
