--- a/package.json
+++ b/package.json
@@ -19,33 +19,33 @@
     "url": "https://github.com/pranaydutta89/covid19India/issues"
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "~7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "~7.9.4",
-    "@babel/runtime": "^7.9.6",
-    "@material-ui/core": "^4.9.14",
+    "@babel/runtime": "^7.10.3",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "~4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "babel-loader": "~8.1.0",
     "clean-webpack-plugin": "~3.0.0",
     "favicons-webpack-plugin": "~3.0.1",
-    "html-webpack-plugin": "^4.2.2",
-    "localforage": "~1.7.3",
+    "html-webpack-plugin": "^4.3.0",
+    "localforage": "^1.7.4",
     "lodash-es": "~4.17.15",
     "moment": "~2.24.0",
     "moment-locales-webpack-plugin": "~1.2.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "~5.1.2",
     "robotstxt-webpack-plugin": "~7.0.0",
     "serviceworker-webpack-plugin": "~1.0.1",
     "sitemap-webpack-plugin": "~0.7.1",
     "webpack": "~4.43.0",
     "webpack-bundle-analyzer": "~3.7.0",
-    "webpack-cli": "~3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "~3.10.3",
     "webpack-merge": "~4.2.2"
   },
